--- a/src/app/questioner-module/creator-component/creator-component.component.html
+++ b/src/app/questioner-module/creator-component/creator-component.component.html
@@ -1,9 +1,44 @@
-<input type="text" (input)="inputHandler($event)">
-
-<button (click)="OpenQ()"></button>
-
-<div *ngFor="let item of formArray; index as i">
-    <span>{{item.title}}</span>
-    <span>{{item}}</span>
-    <input>
-</div>
+<input (input)="inputHandler($event)">
+<button (click)="OpenQ()">OQ</button>
+<button (click)="CheckBoxQ()">CB</button>
+<button (click)="CheckBoxQComplete()">Очень плохая кнопка</button>
+<button (click)="RadioButtonQ()">RB</button>
+<button (click)="RadioButtonQComplete()">Очень плохая кнопка. Часть 2</button>
+<form (ngSubmit)="onSubmit()" #membershipForm="ngForm">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" class="form-control" 
+        id="name"
+        ngModel name="name">
+    </div>
+    <div class="form-group">
+        <div *ngFor="let item of openquestions; let i = index">
+            <strong>{{item.name}}</strong>
+            <input type="text" ngModel name="item.name">
+        </div>
+      <label>Favorite cardio exercises</label>
+      <div class="form-check" 
+         *ngFor="let checkboxes of checkboxquestions; let i = index">
+         {{checkboxes.question}}
+         <div *ngFor="let checkbox of checkboxes.checkboxes; let j = index">
+            <label class="form-check-label">
+                <input type="checkbox" class="form-check-input"
+                ngModel name="{{checkbox.name}}">
+                {{checkbox.name}}
+            </label>
+         </div>
+      </div>
+      <div class="form-check" 
+         *ngFor="let radiobuttons of radiobuttonquestions; let i = index">
+         {{radiobuttons.question}}
+         <div *ngFor="let radiobutton of radiobuttons.radiobuttons; let j = index">
+            <label class="form-check-label">
+                <input type="radio" class="form-check-input"
+                ngModel name="{{radiobutton.name}}">
+                {{radiobutton.name}}
+            </label>
+         </div>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-success">Submit</button>
+</form>
