--- a/src/app/questioner-module/creator-component/creator-component.component.html
+++ b/src/app/questioner-module/creator-component/creator-component.component.html
@@ -1,3 +1,4 @@
+<div class="div">
 <input (input)="inputHandler($event)">
 <button (click)="OpenQ()">OQ</button>
 <button (click)="CheckBoxQ()">CB</button>
@@ -42,3 +43,4 @@
     </div>
     <button type="submit" class="btn btn-success">Submit</button>
 </form>
+</div>
