--- a/src/app/questioner-module/creator-component/creator-component.component.html
+++ b/src/app/questioner-module/creator-component/creator-component.component.html
@@ -1,16 +1,14 @@
 <div class="container">
     <form [formGroup]="form">
-        <label for="title">Title:</label>
+        <!-- <label for="title">Title:</label>
         <input (input)="inputHandler($event)" formControlName="title" id="title" type="text"
-            [ngClass]="{'invalid': form.get('title')?.invalid && form.get('title')?.touched}">
+            [ngClass]="{'invalid': form.get('title')?.invalid && form.get('title')?.touched}"> -->
         <span class="helper-text" *ngIf="form.get('title')?.invalid && form.get('title')?.touched">
             <span *ngIf="form.get('title')?.errors?.['required']">This field cannot be empty!</span>
         </span>
-        <button class="btn" [disabled]="form.invalid || form.disabled" (click)="OpenQ()">OQ</button>
-        <button class="btn" [disabled]="form.invalid || form.disabled" (click)="CheckBoxQ()">CB</button>
-        <button class="btn" [disabled]="form.invalid || form.disabled" (click)="CheckBoxQComplete()">Очень плохая кнопка</button>
-        <button class="btn" [disabled]="form.invalid || form.disabled" (click)="RadioButtonQ()">RB</button>
-        <button class="btn" [disabled]="form.invalid || form.disabled" (click)="RadioButtonQComplete()">Очень плохая кнопка. Часть 2</button>
+        <button class="btn" (click)="OpenQ()">Добавить открытый вопрос</button>
+        <button class="btn" (click)="CheckBoxQComplete()">CB</button>
+        <button class="btn" (click)="RadioButtonQComplete()">RB</button>
     </form>
     <form class="card" (ngSubmit)="onSubmit()" #membershipForm="ngForm">
         <!-- <div class="form-group">
@@ -20,33 +18,35 @@
             ngModel name="name">
         </div> -->
         <div class="form-group">
-            <div *ngFor="let item of openquestions">
-                <strong>{{item.name}}</strong>
-                <input type="text" ngModel name="item.name">
+            <div *ngFor="let item of openquestions; let i = index">
+                <strong>Вопрос:</strong>
+                <input input (input)="inputHandler($event)" formControlName="title" id="title" type="text">
             </div>
-        <!-- <label>Favorite cardio exercises</label> -->
-        <div class="form-check" 
-            *ngFor="let checkboxes of checkboxquestions">
-            {{checkboxes.question}}
-            <div *ngFor="let checkbox of checkboxes.checkboxes; let j = index">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input"
-                     [name]="RBName">
-                    <span>{{checkbox.name}}</span>
-                </label>
+            <!-- <label>Favorite cardio exercises</label> -->
+            <div class="form-check" *ngFor="let checkboxes of checkboxquestions; let i = index ">
+                <strong>Вопрос:</strong>
+                <input input (input)="inputHandler($event)" formControlName="title" id="title" type="text">
+                <button (click)="CheckBoxQ(i)">Добавить чекбокс</button>
+                <div *ngFor="let checkbox of checkboxes.checkboxes; let j = index">
+                    <label class="form-check-label">
+                        <strong>Имя чекбокса</strong>
+                        <input type="text" class="form-check-input" [name]="RBName">
+                        <button (click)="DeleteCB(i,j)">Удалить чекбокс</button>
+                    </label>
+                </div>
             </div>
-        </div>
-        <div class="form-check" 
-            *ngFor="let radiobuttons of radiobuttonquestions; let i = index">
-            {{radiobuttons.question}}
-            <div *ngFor="let radiobutton of radiobuttons.radiobuttons; let j = index">
-                <label class="form-radiobutton-label">
-                    <input type="radio" class="form-check-input with-gap"
-                   [name]="RBName[i]">
-                <span>{{radiobutton.name}}</span>
-                </label>
+            <div class="form-check" *ngFor="let radiobuttons of radiobuttonquestions; let i = index">
+                <strong>Вопрос:</strong>
+                <input input (input)="inputHandler($event)" formControlName="title" id="title" type="text">
+                <button (click)="RadioButtonQ(i)">Добавить радиокнопку</button>
+                <div *ngFor="let radiobutton of radiobuttons.radiobuttons; let j = index">
+                    <label class="form-radiobutton-label">
+                        <strong>Имя радиокнопки</strong>
+                        <input type="text" class="form-check-input with-gap" [name]="RBName[i]">
+                        <button (click)="DeleteRB(i,j)">Удалить радиокнопку</button>
+                    </label>
+                </div>
             </div>
-        </div>
         </div>
         <button type="submit" class="btn btn-success">Submit</button>
         <button type="button" (click)="Clear()" class="btn">Clear</button>
