--- a/src/app/layouts/site-layout/site-layout.component.html
+++ b/src/app/layouts/site-layout/site-layout.component.html
@@ -2,10 +2,10 @@
     <div class="nav-wrapper">
         <ul id="nav-mobile" class="right">
             <li routerLinkActive="active">
-                <a routerLink="/creator">Create</a>
+                <a routerLink="/creator">Создать</a>
             </li>
             <li routerLinkActive="active">
-                <a routerLink="/answer">Answer</a>
+                <a routerLink="/answer">Пройти</a>
             </li>
         </ul>
     </div>
