--- a/src/app/questioner-module/creator-component/creator-component.component.html
+++ b/src/app/questioner-module/creator-component/creator-component.component.html
@@ -6,9 +6,9 @@
         <span class="helper-text" *ngIf="form.get('title')?.invalid && form.get('title')?.touched">
             <span *ngIf="form.get('title')?.errors?.['required']">This field cannot be empty!</span>
         </span>
-        <button class="btn" (click)="OpenQ()">Добавить открытый вопрос</button>
-        <button class="btn" (click)="CheckBoxQComplete()">CB</button>
-        <button class="btn" (click)="RadioButtonQComplete()">RB</button>
+        <button type="button" class="btn" (click)="OpenQ()">Добавить открытый вопрос</button>
+        <button type="button" class="btn" (click)="CheckBoxQComplete()">Добавить вопрос с несколькими вариантами выбора</button>
+        <button type="button" class="btn" (click)="RadioButtonQComplete()">Добавить вопрос с одним вариантом выбора</button>
     </form>
     <form class="card" (ngSubmit)="onSubmit()" #membershipForm="ngForm">
         <!-- <div class="form-group">
@@ -20,40 +20,47 @@
         <div class="form-group">
             <div *ngFor="let item of openquestions; let i = index">
                 <strong>Вопрос:</strong>
-                <input class="form-control" name="OpenQTitle[{{i}}]" [(ngModel)]="OpenQTitle[i]" value="OpenQTitle[i]"  type="text">
+                <input class="form-control" name="OpenQTitle[{{i}}]" [(ngModel)]="OpenQTitle[i]"  type="text">
             </div>
             <div class="form-check" *ngFor="let checkboxes of checkboxquestions; let i = index ">
                 <strong>Вопрос:</strong>
+                <div style="display: flex; flex-direction: row;">
                 <input input name="CheckBoxQTitle[{{i}}]" [(ngModel)]="CheckBoxQTitle[i]" id="CheckBoxQTitle" type="text">
-                <button type="button" (click)="CheckBoxQ(i)">Добавить чекбокс</button>
+                <button type="button" (click)="CheckBoxQ(i)"><i class="material-icons">add check_box</i></button>
+                </div>
                 <div *ngFor="let checkbox of checkboxes.checkboxes; let j = index">
                     <label class="form-check-label">
                         <strong>Имя чекбокса</strong>
                         <div style="display: flex; flex-direction: row;">
                         <input type="text" class="form-check-input" name="CheckBoxQName[{{i}}][{{j}}]" [(ngModel)]="CheckBoxQName[i][j]" id="CheckBoxQName" >
-                        <button (click)="DeleteCB(i,j)"><i class="material-icons">delete_sweep</i></button>
+                        <button type="button" (click)="DeleteCB(i,j)"><i class="material-icons">delete_sweep</i></button>
                         </div>
                     </label>
                 </div>
             </div>
             <div class="form-check" *ngFor="let radiobuttons of radiobuttonquestions; let i = index">
                 <strong>Вопрос:</strong>
+                <div style="display: flex; flex-direction: row;">
                 <input name="RadioButtonQTitle[{{i}}]" [(ngModel)]="RadioButtonQTitle[i]" id="RadioButtonQTitle" type="text">
-                <button type="button" (click)="RadioButtonQ(i)">Добавить радиокнопку</button>
+                <button type="button" (click)="RadioButtonQ(i)"><i class="material-icons">add radio_button_checked</i>
+                </button>
+                </div>
                 <div *ngFor="let radiobutton of radiobuttons.radiobuttons; let j = index">
                     <label class="form-radiobutton-label">
                         <strong>Имя радиокнопки</strong>
+                        <div style="display: flex; flex-direction: row;">
                         <input type="text" class="form-check-input with-gap"  name="RadioButtonQName[{{i}}][{{j}}]" [(ngModel)]="RadioButtonQName[i][j]" id="RadioButtonQName" >
-                        <button (click)="DeleteRB(i,j)"><i class="material-icons">delete_sweep</i></button>
+                        <button type="button" (click)="DeleteRB(i,j)"><i class="material-icons">delete_sweep</i></button>
+                        </div>
                     </label>
                 </div>
             </div>
         </div>
-        <button type="submit" class="btn btn-success">Submit</button>
-        <button type="button" (click)="Clear()" class="btn">Clear</button>
+        <button type="submit" class="btn btn-success">Подтвердить</button>
+        <button type="button" (click)="Clear()" class="btn">Очистить</button>
         <label>
             <input type="checkbox">
-            <span>Red</span>
+            <span>Я чекбокс :)</span>
         </label>
         
     </form>
