--- a/src/app/questioner-module/answer-component/answer-component.component.html
+++ b/src/app/questioner-module/answer-component/answer-component.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
     <div class="container">
         <form class="card" (ngSubmit)="onSubmit()" #answerForm="ngForm">
         <div class="form-group">
@@ -27,6 +27,7 @@
         </div>
         <div>
             <button style="margin-top: 30px;" type="submit" class="waves-effect waves-light btn">Отправить</button>
+            <button style="margin-top: 30px;" type="button" (click)="DeleteSurvey()" class="waves-effect waves-light btn">Удалить</button>
         </div>
         </form>
     </div>
