--- a/src/app/questioner-module/creator-component/creator-component.component.scss
+++ b/src/app/questioner-module/creator-component/creator-component.component.scss
@@ -30,7 +30,7 @@ button:active { background: #02906f; color:white;}
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 54%;
+    width: 70%;
     height: 100%;
     border-radius: 8px;
     box-sizing: border-box;
@@ -63,3 +63,8 @@ input:focus {
 label {font-weight: bold;}
 .form-check-label {font-weight: 100;}
 .form-check-input {height: 20px;}
+
+.card-title{
+    display: flex;
+    align-items: center;
+}
